--- a/src/components/Home/Shipping/Shipping.css
+++ b/src/components/Home/Shipping/Shipping.css
@@ -8,3 +8,10 @@
     margin: auto;
     border-radius: 20px;
 }
+.bg-blur{
+    background: rgba(255,255,255,0.5);
+    backdrop-filter: blur(5px);
+}
+.border-custom{
+    border-bottom: 5px solid #ccc;
+}
