--- a/src/components/Home/Shipping/Shipping.css
+++ b/src/components/Home/Shipping/Shipping.css
@@ -15,3 +15,11 @@
 .border-custom{
     border-bottom: 5px solid #ccc;
 }
+.overflow-custom{
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 200px
+}
+.overflow-custom::-webkit-scrollbar{
+    display: none;
+}
